/*
 * $Id: ChangeLog,v 1.6606 2009/09/30 16:19:24 marchuet Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2009-10-01 10:10 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
   * common.mak
   * compile.mak
   * source\rdd\Makefile
   + source\rdd\dbrename.c
     + Added DBRENAME( <cTableName>, <cIndexName>, <cNewName>, [<cRddName>], [<nConnection>] ) or
       DBRENAME( <cFileName>, <cNewFileName> )  to the famili of RDD functions DBDROP DBEXIST, that can admit
       to rename at server side the files, too at client side. It first was implemented only at filenet api with
       the next functions more:
		NET_COPYTO( <cLocalFile>, <cRemoteFile>|<cRemoteDevice> )
		NET_COPYFROM( <cRemoteFile>, <cLocalFile>|<cLocalDevice> )
		NET_COPYFILE( <cRemoteFile>, <cRemoteFile>|<cRemoteDevice> )
	
		NET_FRENAME( <cRemoteOldFile>, <cRemoteNewFile> ) --> nSuccess
		NET_FERASE( <cRemoteFile> ) --> nSuccess

		NET_MAKEDIR( <cRemoteDirectory> ) --> nOSError
		NET_DIRREMOVE( <cRemoteDirectory> ) --> nOSError
		NET_FILEATTR( [<cRemoteFileName>] ) --> nAttributes
		NET_DIRECTORY( <cRemoteDirSpec>, [<cAttributes>] ) --> aDirectory

		NET_OPENCONNECTION( <cIPServer|cNameServer>, <nPort> ) -> pSocket
		NET_CLOSECONNECTION( pSocket )

2009-09-30 18:10 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
   * contrib\rdd_ads\ads1.c
   * contrib\rdd_ads\adsfunc.c
   * contrib\rdd_ads\rddads.h
   * include\hbapi.h
   * include\hbapicdp.h
   * include\hbapifs.h
   * include\hbapirdd.h
   * include\hbdbf.h
   * include\hbdbsort.h
   * include\hbrddbmc.h
   * include\hbrddcdx.h
   * include\hbrdddbf.h
   * include\hbrdddel.h
   * include\hbrddfpt.h
   * include\hbrddmdx.h
   * include\hbrddnsx.h
   * include\hbrddntx.h
   * include\hbrddrec.h
   * include\hbrddsdf.h
   * include\hbsxfunc.h
   * include\thread.h