@@ -1,5 +1,5 @@
 /*
- * $Id: ChangeLog,v 1.6606 2009/09/30 16:19:24 marchuet Exp $
+ * $Id: ChangeLog,v 1.6607 2009/10/01 07:48:41 marchuet Exp $
  */
 
 /* Use this format for the entry headers:
@@ -7,6 +7,13 @@
    For example:
    2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
 */
+
+2009-10-01 17:25 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
+   * source\rdd\usrrdd\rdds\ansirdd.prg
+     - removed incorrect comments.
+   * source\rtl\filenet.c
+     * Changes nedded to activate REMOTE file server to all rdds : delim, sdf
+       bmdbfcdx, dbfntx, dbfcdx, rmdbfcdx, sixcdx, bmsixcdx,...
 
 2009-10-01 10:10 UTC+0100 Miguel Angel Marchuet <miguelangel@marchuet.net>
    * common.mak
